@@ -7,7 +7,7 @@
 
 <book>
   <bookinfo>
-    <title>FreeVikings Developer's Guide</title>
+    <title>freeVikings: Developer's Guide</title>
 
     <author>
       <firstname>Jakub</firstname> 
